--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -4,4 +4,52 @@
     margin: 0 auto;
     display: inline-block;
     position: relative;
+    margin-bottom: -3.5px;
+}
+.Copy-btn{
+    position: absolute;
+    display: inline-block;
+    width: 100px;
+    height: 30px;
+    top:50%;
+    left:50%;
+    margin-left: -50px;
+    margin-top: -15px;
+    text-align: center;
+    outline: none;
+    background-color: rgba(255,255,255,0.3);
+    font-size: 1rem;
+    line-height: 30px;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    opacity: 0;
+}
+.ColorBox:hover .Copy-btn{
+    opacity: 1;
+    transition: 0.5s;
+}
+.box-content{
+    position: absolute;
+    widows: 100%;
+    left : 0;
+    bottom: 0;
+    padding: 10px;
+    color: black;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+.see-more{
+    background-color: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    border: none;
+    bottom: 0;
+    right: 0;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    width: 60px;
+    height: 30px;
+    line-height: 30px;
 }
