--- a/src/Palette.css
+++ b/src/Palette.css
@@ -1,6 +1,20 @@
 .Palette{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 .Palette-colors{
     height: 90vh;
+}
+.Palette-footer{
+    background: rgba(0, 0, 0, 0.4);
+    height: 5vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 10px;
+    color: azure;
+    font-weight: bold;
+    letter-spacing: .1rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
