--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -6,7 +6,17 @@
     position: relative;
     margin-bottom: -4.5px;
 }
-.Copy-btn{
+.ColorBox.Back {
+    height: 50%;
+    background: black;
+    color: azure;
+}
+
+.Back-btn:hover {
+    text-decoration: none;
+    color: azure;
+}
+.Copy-btn ,.Back-btn{
     position: absolute;
     display: inline-block;
     width: 100px;
@@ -22,7 +32,9 @@
     line-height: 30px;
     color: white;
     text-transform: uppercase;
-    border: none;
+    border: none;    
+}
+.Copy-btn{
     opacity: 0;
 }
 .ColorBox:hover .Copy-btn{
@@ -99,4 +111,7 @@
 }
 .copy-msg p{
     font-size: 2rem;
+}
+.SingleColorPalette .ColorBox{
+    height: 50%;
 }
